[JSC] Read-modify-write operation's second put-to-scope should not throw error if binding does not exist https://bugs.webkit.org/show_bug.cgi?id=234813

Reviewed by Alexey Shvayka.

JSTests:

* stress/global-object-read-modify-write-remove-at-get-strict.js: Added.
(shouldThrow):
* stress/global-object-read-modify-write-remove-at-get.js: Added.
(shouldBe):
* test262/expectations.yaml:

Source/JavaScriptCore:

This patch fixes a bug throwing RefereceError when read-modify-write's read operation removes binding from object.
Throwing error should happen only when evaluating it under strict mode.

* bytecompiler/NodesCodegen.cpp:
(JSC::PostfixNode::emitResolve):
(JSC::PrefixNode::emitResolve):
(JSC::ReadModifyResolveNode::emitBytecode):
(JSC::ShortCircuitReadModifyResolveNode::emitBytecode):


Canonical link: https://commits.webkit.org/245679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287544 268f45cc-cd09-0410-ab3c-d52691b4dbfc